Mon Jul  9 09:20:49 2001  Owen Taylor  <otaylor@redhat.com>

	* config/locale.alias: Fix typo - traditional, not traditonal.

Mon Jul 09 00:14:02 2001  George Lebl <jirka@5z.com>

	* Makefile.am, autogen.sh, configure.in, daemon/Makefile.am,
	  daemon/auth.c, daemon/gdm.c, daemon/gdm.h, daemon/misc.c,
	  daemon/server.c, daemon/slave.c, daemon/verify-crypt.c,
	  daemon/verify-pam.c, daemon/verify-shadow.c, daemon/xdmcp.c,
	  gui/Makefile.am, gui/gdmchooser.c, gui/gdmconfig.c, gui/gdmlogin.c,
	  gui/gdmphotosetup.c, gui/misc.[ch], po/POTFILES.in:  Use
	  vicious-extensions module rather then local routines

	* gui/icon-entry-hack.[ch]: remove, in vicious-extensions now

Sun Jul 08 16:38:02 2001  George Lebl <jirka@5z.com>

	* Release 2.2.3.1 

	* config/locale.alias, gui/gdmlanguages.c: added simplified and
	  traditional chinese

Fri Jul 06 04:25:39 2001  George Lebl <jirka@5z.com>

	* daemon/slave.c: Fix fd leak after dup2

Fri Jul 06 01:55:27 2001  George Lebl <jirka@5z.com>

	* daemon/gdm.c: Correct checks for chooser greeter binaries, and
	  fix Suspend feature

	* daemon/gdm.[ch], daemon/misc.[ch], gui/misc.[ch], daemon/server.c,
	  daemon/slave.c, gui/gdmconfig.c, gui/gdmlogin.c: Use popt for
	  splitting argv's, this makes things understand quotes which are
	  apparently already used in places (eek).  This underlines the need
	  for the vicious-extentions-module, I just cut and paste too much
	  code.  Watch for this new cvs module soon.

	* daemon/slave.c: fix code for sessions with spaces in them

Thu Jul 05 23:45:45 2001  George Lebl <jirka@5z.com>

	* daemon/gdm.c: open 0,1,2 with correct rw flag

	* daemon/slave.c: Ryan Murray pointed me to some of my braindamage
	  which was causing gdm to fail in horrible ways on debian.  Get rid
	  of the greeter FILE * which caused us to close fd 0 at one point
	  which then caused us to prematurely close our X connection.  We
	  just use stdin now, which makes more sense.
