@@ -1,3 +1,8 @@
+Wed Jul 11 12:55:36 2001  George Lebl <jirka@5z.com>
+
+	* daemon/verify-pam.c, daemon/verify-crypt.c: when user doesn't exist
+	  ask for a password anyway.  Also some sanity fixing all around.
+
 Mon Jul  9 09:20:49 2001  Owen Taylor  <otaylor@redhat.com>
 
 	* config/locale.alias: Fix typo - traditional, not traditonal.
